--- a/f299-template-pi-paper/Topicos/metodologia.tex
+++ b/f299-template-pi-paper/Topicos/metodologia.tex
@@ -20,8 +20,18 @@ Após o realizar \textit{login}, o participante é direcionado para a página de
 
 Na primeira fase, o participante deve fixar o olhar por cinco segundos em cinco alvos estáticos,
 representados por estrelas, enquanto elementos animados surgem ao redor. Após os 5 segundos,
-cada estrela desaparece da tela. A música de fundo nesta etapa apresenta um ritmo moderado. O
+cada estrela desaparece da tela. A música de fundo nesta etapa apresenta um ritmo moderado. O tempo total da fase é de 1 minuto. O
 objetivo é avaliar a capacidade de manter a atenção em um ponto fixo durante um tempo determinado, ignorando estímulos visuais e auditivos periféricos.
+
+Ao iniciar a fase, uma conexão via WebSocket é aberta entre o cliente (front-end) e o servidor (back-end). O servidor reconhece o cliente conectado, que envia as coordenadas das estrelas para o endpoint $\texttt{/iniciar\_experimento\_com\_config}$. O eye tracking é iniciado, e o cliente começa a enviar as coordenadas dos olhos a cada 1 segundo para $\texttt{/gaze\_data}$. O servidor, por sua vez, escolhe uma dentre as cinco estrelas para ser o alvo atual, e o cliente escuta através de $\texttt{/fase\_iniciada}$, pois este é responsável por deixar a estrela em destaque e, ao mesmo tempo, continua transmitindo as coordenadas dos olhos.Em seguida, o servidor conta até 10 segundos para que o usuário olhe fixadamente para a estrela por, no mínimo, 5 segundos. Se o usuário olhar por 5 segundos ou se o tempo de 10 segundos se esgotar, o servidor comunica que a fase terminou através de $\texttt{/fase\_atual\_finalizada}$. O cliente, então, deleta a estrela que antes estava em destaque, e o servidor escolhe uma nova estrela para ser o alvo atual. Esse processo se repete até que todas as estrelas sejam apresentadas.Ao final da fase, o servidor é responsável por salvar o objeto $\texttt{historico\_olhar\_fase1}$ no banco de dados, que contém o estado do olhar (sendo $\texttt{1}$ para olhando e $\texttt{0}$ para desviando), um timestamp e o índice do alvo atual. Além desse objeto, o $\texttt{resultado\_alvos\_fase1}$ também é salvo, contendo o índice do alvo, se terminou por sucesso ou por tempo esgotado, o tempo de início do alvo e o tempo de término do alvo.Ao ter esses dados salvos, o servidor calcula as métricas TDC da Fase 1, que são: número de acertos (olhou por 5 segundos), número de erros de omissão (demorou 10 segundos ou mais para começar a olhar), erros de comissão (começou a focar antes de 10 segundos, mas não manteve o foco por 5 segundos), o tempo médio de reação (tempo que levou para olhar para o alvo) e o desvio padrão. Essas métricas são enviadas ao cliente através de $\texttt{/fase\_concluida}$, para que o usuário visualize seu desempenho na fase, conforme ilustrado na Figura \ref{fig:fim-fase1-fase3}.
+
+\begin{figure}[H]
+    \centering
+    \caption{Resultados da fase 1}%
+    \label{fig:fim-fase1-fase3}
+    \includegraphics[width=\textwidth]{fim-fase1-fase3.png}%
+    \SourceOrNote{Autoria Própria (2025)}
+\end{figure}
 
 \begin{figure}[H]
     \centering
@@ -31,7 +41,9 @@ objetivo é avaliar a capacidade de manter a atenção em um ponto fixo durante 
     \SourceOrNote{Autoria Própria (2025)}
 \end{figure}
 
-Na segunda fase, o participante deve manter o foco em cinco estrelas estáticas, que brilham individualmente em sequência (estímulo primário). Simultaneamente, três planetas em movimento transitam pela tela, atuando como distratores (estímulos secundários) cuja presença não é mencionada nas instruções. Ao término da exibição, o participante é submetido a um teste de reconhecimento: sete opções de planetas são apresentadas, sendo que apenas três transitaram na tela. O participante deve indicar, por meio de botões IoT, quais planetas foram reconhecidos durante o trânsito. O reconhecimento correto de planetas efetivamente exibidos é contabilizado como acerto, enquanto a seleção de planetas não exibidos configura erro. Essa etapa avalia simultaneamente o desempenho na tarefa principal e a detecção incidental de estímulos periféricos. A interpretação do reconhecimento de estímulos secundários como indicador positivo ou negativo será definida após validação com grupos de referência (crianças com e sem TDAH), considerando duas hipóteses alternativas: (1) maior detecção incidental pode refletir dificuldade de inibição de distratores e associar-se ao TDA; (2) menor detecção, decorrente de foco mais exclusivo na tarefa principal, pode estar mais associada ao TDA. A trilha sonora, mais intensa e acelerada nesta fase, eleva a carga cognitiva e permite observar o impacto de múltiplos estímulos simultâneos na manutenção da atenção.
+Na segunda fase, o participante deve manter o foco em cinco estrelas estáticas, que brilham alternadamente (estímulo primário). Simultaneamente, três planetas em movimento transitam pela tela, atuando como distratores (estímulos secundários) cuja presença não é mencionada nas instruções. A fase 2 é composta por duas rodadas iguais de 15 segundos cada, onde apenas os planetas que transitam pela tela são alterados. Ao término de cada rodada, o participante é submetido a um teste de reconhecimento: sete opções de planetas são apresentadas, sendo que apenas três transitaram na tela. O participante deve indicar, por meio de botões IoT, quais planetas foram reconhecidos durante o trânsito. O reconhecimento correto de planetas efetivamente exibidos é contabilizado como acerto, enquanto a seleção de planetas não exibidos configura erro. Dessa forma, passadas as duas rodadas, ou seja, ao final da fase, são exibidos: quantidade de acertos, planetas vistos e planetas ignorados. Essa etapa avalia simultaneamente o desempenho na tarefa principal e a detecção incidental de estímulos periféricos. A interpretação do reconhecimento de estímulos secundários como indicador positivo ou negativo será definida após validação com grupos de referência (crianças com e sem TDAH), considerando duas hipóteses alternativas: (1) maior detecção incidental pode refletir dificuldade de inibição de distratores e associar-se ao TDA; (2) menor detecção, decorrente de foco mais exclusivo na tarefa principal, pode estar mais associada ao TDA. A trilha sonora, mais intensa e acelerada nesta fase, eleva a carga cognitiva e permite observar o impacto de múltiplos estímulos simultâneos na manutenção da atenção.
+
+No início da fase 2, uma conexão via WebSocket é aberta entre o cliente e o servidor. O servidor reconhece o cliente conectado, que apresenta estrelas piscando alternadamente enquanto planetas se movem pela tela. Ao final de cada rodada, o cliente envia ao servidor o comando de aguardo da resposta do usuário através do endpoint $\texttt{/aguardando\_iot}$. O servidor, então, transmite a mensagem ao IoT (Internet das Coisas) e solicita que acenda um LED, indicando que o participante pode responder. O IoT acende o LED e faz a leitura dos botões pressionados pelo evento $\texttt{button pressed}$. A cada clique no botão correspondente ao planeta, o IoT utiliza a função do servidor que envia ao cliente o planeta clicado e se ele está correto ou não. Se o planeta estiver correto, ele é iluminado com a cor verde; caso contrário, é iluminado com a cor vermelha. O participante pode apertar três botões por rodada. Ao finalizar ambas as rodadas, o IoT desliga o LED e o servidor envia ao cliente a quantidade de acertos, planetas vistos e planetas ignorados através de $\texttt{/fase\_atual\_finalizada}$.
 
 \begin{figure}[H]
     \centering
@@ -61,17 +73,7 @@ Em futuras iterações do projeto, planeja-se o aperfeiçoamento estético e erg
     \SourceOrNote{Autoria Própria (2025)}
 \end{figure}
 
-Na terceira fase, a demanda cognitiva é intensificada pela necessidade de alternância rápida do foco visual entre diferentes regiões da tela, caracterizadas por menor previsibilidade espacial. Nessa etapa, uma estrela surge de forma estática, exigindo resposta ocular imediata do participante. Simultaneamente, um segundo estímulo estático é apresentado, alternando entre os estados ligado e desligado em intervalos regulares. Quando esse estímulo é ativado (ascende), o participante deve manter o olhar fixo sobre ele até que se apague, o que permite avaliar a atenção dividida e o controle do direcionamento ocular. A trilha sonora atinge seu nível máximo de intensidade e agitação, contribuindo para aumentar a complexidade da tarefa. O desempenho do participante nesta fase é utilizado como indicador da agilidade atencional e da capacidade de redirecionamento e manutenção do foco visual diante de estímulos dinâmicos.
-
-Ao final de cada fase, o servidor é responsável por enviar ao cliente (front-end) a quantidade de acertos, erros de omissão e erros de comissão atingidos pelo participante. Assim, o front-end exibe um resumo do desempenho ao usuário, conforme ilustrado na Figura \ref{fig:fim-fase1-fase3}.
-
-\begin{figure}[H]
-    \centering
-    \caption{Resultados por fase}%
-    \label{fig:fim-fase1-fase3}
-    \includegraphics[width=\textwidth]{fim-fase1-fase3.png}%
-    \SourceOrNote{Autoria Própria (2025)}
-\end{figure}
+Na terceira fase, a demanda cognitiva é intensificada pela necessidade de alternância rápida do foco visual entre diferentes regiões da tela, caracterizadas por menor previsibilidade espacial. Nessa etapa, uma estrela surge de forma estática, exigindo resposta ocular imediata do participante. Simultaneamente, um segundo estímulo estático é apresentado (radar de uma aeronave), alternando entre os estados ligado e desligado em intervalos regulares. Quando esse estímulo é ativado (ascende), o participante deve manter o olhar fixo sobre ele até que se apague, o que permite avaliar a atenção dividida e o controle do direcionamento ocular. A duração desta fase é de 30 segundos. A trilha sonora atinge seu nível máximo de intensidade e agitação, contribuindo para aumentar a complexidade da tarefa. O desempenho do participante nesta fase é utilizado como indicador da agilidade atencional e da capacidade de redirecionamento e manutenção do foco visual diante de estímulos dinâmicos.
 
 Ao término das três fases, o sistema gera um pré-diagnóstico com base nas métricas TDC. Para isso, são utilizados os registros de desempenho e os dados mais recentes de rastreamento ocular obtidos durante as fases. Este pré-diagnóstico é elaborado por um módulo de IA, que interpreta as métricas e o desempenho do participante. O feedback resultante é apresentado em duas formas: (1) uma mensagem textual interpretativa, como: “Sua atenção está conforme o esperado”, “Sua atenção está acima do esperado” ou “Sua atenção está abaixo do esperado”, de acordo com o desempenho observado; e (2) a exibição de uma porcentagem que representa a precisão do olhar capturada pelo sistema de rastreamento ocular, conforme ilustrado na Figura \ref{fig:fim-geral}.
 
